# horecamark

./: .env.automation.example  .gitignore  AGENT.md  AUTOMATION.md  CODEBASE.md  COOLIFY.md  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
database/: __init__.py
database/migrations/: .gitkeep  001_initial.sql
database/seeds/: .gitkeep  manual_mappings.csv
docs/: PLAN-horeca-mark.md
n8n-workflows/: .gitkeep  README.md  daily-scrape.json
scraper/: .env.example  Dockerfile  __init__.py  database.py  entrypoint.sh  main.py  requirements.txt
scraper/sites/: __init__.py  arigastro.py  base.py  cafemarkt.py  horecamark.py  horecamarkt.py  kariyermutfak.py  mutbex.py
scraper/utils/: __init__.py  analyzer.py  brand_list.py  config.py  db_helper.py  logger.py  matcher.py  normalizer.py  notifier.py  reporter.py  scheduler.py
scripts/: Get-Health.ps1  Start-Scheduler.ps1  Start-Scraper.ps1  health-check.sh  monitor-logs.sh  start-scheduler.sh  start-scraper.sh
tests/: __init__.py  test_analyzer.py  test_matcher.py
